[package]
name = "DBeaverPasswordViewer"
version = "0.1.0"
edition = "2021"
authors = ["kerwin612 <kerwin612@qq.com>"]
description = "A tool for viewing DBeaver Community Edition passwords"
repository = "https://github.com/kerwin612/DBeaverPasswordViewer"
keywords = ["dbeaver", "rust-app"]
license-file = "LICENSE"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes="0.7.5"
hex="0.4.3"
serde_json = "1.0"
block-modes="0.8.1"
hex-literal="0.3.3"
